fix spacing

--- a/app/globals.css
+++ b/app/globals.css
@@ -78,7 +78,7 @@ h2{
   @apply font-bold text-xl md:text-[34px] text-[#333333] leading-[120%]  tracking-[-0.01em] 
 }
 .compareNowButtonGradient {
-  @apply bg-gradient-to-b from-yellow-400 to-orange-400  block text-white px-10 py-4 rounded-md font-bold
+  @apply bg-gradient-to-b from-yellow-400 to-orange-400 text-sm block text-white px-6 py-2 md:px-10 md:py-4 rounded-md font-bold
 }
 
 body{
